--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     
     <groupId>example.webappframework</groupId>
     <artifactId>Example-WebAppFramework</artifactId>
-   	<packaging>jar</packaging>
+   	<packaging>war</packaging>
 	<version>1.0</version>
 	<url>http://maven.apache.org</url>
 
@@ -27,10 +27,10 @@
     <dependencies>
 	
 		<dependency>
-    		<groupId>com.github.hemanthsridhar</groupId>
-    		<artifactId>WebAppFramework</artifactId>
-    		<version>1.3.0</version>
-  		</dependency>
+			<groupId>com.github.hemanthsridhar</groupId>
+			<artifactId>WebAppFramework</artifactId>
+			<version>1.3.2</version>
+</dependency>
      </dependencies>
 
     <build>
