removed extra variables, changed the name of the keys in the SearchPageObjects

--- a/resources/PageObjects/SearchPageObjects.properties
+++ b/resources/PageObjects/SearchPageObjects.properties
@@ -1,2 +1,2 @@
-searchButton=//button[@class='lsb']
-searchResults=//div[@class='rc']/descendant::h3/a
+searchButtonLocator=//button[@class='lsb']
+searchResultsLocator=//div[@class='rc']/descendant::h3/a
