--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,18 @@
                 		</configuration>
             </plugin>
             
+            	<plugin>
+					<groupId>org.eclipse.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>9.2.10.v20150310</version>
+					<configuration>
+						<webAppSourceDirectory>${project.build.directory}/site/allure-maven-plugin</webAppSourceDirectory>
+						<stopKey>stop</stopKey>
+						<stopPort>1234</stopPort>
+					</configuration>
+				</plugin>
+				
+				
             <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
@@ -75,6 +87,20 @@
             </plugin>
         </plugins>
 </pluginManagement>
-       
     </build>
+    
+    <reporting>
+		<excludeDefaults>true</excludeDefaults>
+		<plugins>
+			<plugin>
+				<groupId>ru.yandex.qatools.allure</groupId>
+				<artifactId>allure-maven-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<reportVersion>${allure.version}</reportVersion>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
+	
 </project>
