--- a/pom.xml
+++ b/pom.xml
@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    
-   
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-    
-    <groupId>example.webappframework</groupId>
-    <artifactId>Example-WebAppFramework</artifactId>
-   	<packaging>war</packaging>
+
+
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>example.webappframework</groupId>
+	<artifactId>Example-WebAppFramework</artifactId>
+	<packaging>war</packaging>
 	<version>1.0</version>
 	<url>http://maven.apache.org</url>
 
-    <properties>
-     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    	<compiler.version>1.8</compiler.version>
-        <aspectj.version>1.8.9</aspectj.version>
-    </properties>
-   
-
-    <name>Example-WebAppFramework</name>
-    <description>This is project which gives an example on how to use WebAppFramework.jar which is present in maven central.</description>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<compiler.version>1.8</compiler.version>
+		<aspectj.version>1.8.9</aspectj.version>
+	</properties>
 
 
-    <dependencies>
-	
+	<name>Example-WebAppFramework</name>
+	<description>This is project which gives an example on how to use WebAppFramework.jar which is present in maven central.</description>
+
+
+	<dependencies>
+
 		<dependency>
 			<groupId>com.github.hemanthsridhar</groupId>
 			<artifactId>WebAppFramework</artifactId>
 			<version>1.3.4</version>
 		</dependency>
-     </dependencies>
+	</dependencies>
 
-    <build>
+	<build>
 		<pluginManagement>
-	 		<plugins>
-        		<plugin>
-                	<groupId>org.apache.maven.plugins</groupId>
-               		 <artifactId>maven-compiler-plugin</artifactId>
-                	<version>3.1</version>
-                		<configuration>
-                    		<source>${compiler.version}</source>
-                    		<target>${compiler.version}</target>
-                		</configuration>
-            </plugin>
-            
-            	<plugin>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>${compiler.version}</source>
+						<target>${compiler.version}</target>
+					</configuration>
+				</plugin>
+
+				<plugin>
 					<groupId>org.eclipse.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
 					<version>9.2.10.v20150310</version>
@@ -56,40 +55,40 @@
 						<stopPort>1234</stopPort>
 					</configuration>
 				</plugin>
-				
-				
-            <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
+
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.6</version>
 					<configuration>
 						<failOnMissingWebXml>false</failOnMissingWebXml>
 					</configuration>
-			</plugin>
-      
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-               	 <suiteXmlFiles>
-                	<suiteXmlFile>testng.xml</suiteXmlFile>
-               	 </suiteXmlFiles>
-                    <argLine>-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar</argLine>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.aspectj</groupId>
-                        <artifactId>aspectjweaver</artifactId>
-                        <version>${aspectj.version}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-        </plugins>
-</pluginManagement>
-    </build>
-    
-    <reporting>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.19.1</version>
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>testng.xml</suiteXmlFile>
+						</suiteXmlFiles>
+						<argLine>-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar</argLine>
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>org.aspectj</groupId>
+							<artifactId>aspectjweaver</artifactId>
+							<version>${aspectj.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
+	<reporting>
 		<excludeDefaults>true</excludeDefaults>
 		<plugins>
 			<plugin>
