--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>example.webappframework</groupId>
 	<artifactId>Example-WebAppFramework</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<version>1.0</version>
 	<url>http://maven.apache.org</url>
 
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>com.github.hemanthsridhar</groupId>
 			<artifactId>WebAppFramework</artifactId>
-			<version>1.3.4</version>
+			<version>1.3.6</version>
 		</dependency>
 	</dependencies>
 
